feat: add reset command to wipe progress and restart

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "preview": "node src/index.js --preview",
         "plan": "node src/index.js --plan",
         "run": "node src/index.js --run",
+        "reset": "node src/reset.js",
         "service:install": "node src/service-installer.js install",
         "service:uninstall": "node src/service-installer.js uninstall",
         "service:status": "node src/service-installer.js status"
